chore: Clean up core module code
Remove unused fields and methods from core classes:
- Account: Remove 30 lines of unused code
- BlockBuilder: Minor cleanup
- BlockImporter: Remove 54 lines of unused code
- BlockValidator: Minor cleanup

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>